--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^1.0.0",
-    "nuxt": "^2.14.0"
+    "@prisma/client": "^2.6.2",
+    "bluebird": "^3.7.2",
+    "envalid": "^6.0.2",
+    "node-fetch": "^2.6.1",
+    "nuxt": "^2.14.0",
+    "qs": "^6.9.4"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.0",
@@ -24,6 +29,7 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
+    "@prisma/cli": "^2.6.2",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
