--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
-    "test": "jest"
+    "test": "jest",
+    "prisma:client": "prisma generate",
+    "prisma:lint": "prisma format",
+    "prisma:migrate": "prisma migrate --experimental",
+    "prisma:studio": "prisma studio --experimental"
   },
   "dependencies": {
+    "@js-joda/core": "^3.1.0",
     "@nuxt/typescript-runtime": "^1.0.0",
     "@prisma/client": "^2.6.2",
     "bluebird": "^3.7.2",
     "envalid": "^6.0.2",
-    "node-fetch": "^2.6.1",
     "nuxt": "^2.14.0",
-    "qs": "^6.9.4"
+    "swagger-client": "^3.10.12"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.0",
