--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "comment-tracker",
   "version": "1.0.0",
   "private": true,
+  "esm": {
+    "cjs": true
+  },
   "scripts": {
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
@@ -22,8 +25,12 @@
     "@prisma/client": "^2.6.2",
     "bluebird": "^3.7.2",
     "envalid": "^6.0.2",
+    "esm": "^3.2.25",
+    "lodash": "^4.17.20",
     "nuxt": "^2.14.0",
-    "swagger-client": "^3.10.12"
+    "swagger-client": "^3.10.12",
+    "winston": "^3.3.3",
+    "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.0",
@@ -34,6 +41,7 @@
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "@prisma/cli": "^2.6.2",
+    "@types/lodash": "^4.14.161",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
