--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@js-joda/core": "^3.1.0",
     "@nuxt/typescript-runtime": "^1.0.0",
     "@prisma/client": "^2.6.2",
+    "@types/bluebird": "^3.5.32",
     "bluebird": "^3.7.2",
     "envalid": "^6.0.2",
     "esm": "^3.2.25",
+    "jsdom": "^16.4.0",
     "lodash": "^4.17.20",
     "nuxt": "^2.14.0",
+    "papaparse": "^5.3.0",
     "swagger-client": "^3.10.12",
     "winston": "^3.3.3",
     "winston-papertrail": "^1.0.5"
