--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@awaitjs/express": "^0.6.1",
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "lodash": "^4.17.20",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
@@ -25,6 +30,10 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
+    "@types/connect": "^3.4.33",
+    "@types/express": "^4.17.8",
+    "@types/http-errors": "^1.8.0",
+    "@types/lodash": "^4.14.161",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
