commit after running vue cli

--- a/client/package.json
+++ b/client/package.json
@@ -3,52 +3,55 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
     "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
+    "dev": "nuxt-ts",
     "generate": "nuxt-ts generate",
+    "lint": "npm run lint:js && npm run lint:style",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lint": "npm run lint:js && npm run lint:style",
+    "start": "nuxt-ts start",
     "test": "jest"
+  },
+  "resolutions": {
+    "eslint-plugin-vue": "^7.0.0-beta.4"
   },
   "dependencies": {
     "@awaitjs/express": "^0.6.1",
-    "@nuxt/typescript-runtime": "^1.0.0",
-    "@nuxtjs/axios": "^5.12.0",
+    "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/axios": "^5.12.2",
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "graphql": "^15.3.0",
     "http-errors": "^1.8.0",
     "lodash": "^4.17.20",
-    "nuxt": "^2.14.0",
+    "nuxt": "^2.14.6",
+    "vue": "^2.6.12",
     "vue-recaptcha-v3": "^1.9.0"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.0",
-    "@nuxt/typescript-build": "^2.0.2",
-    "@nuxtjs/eslint-config": "^3.1.0",
-    "@nuxtjs/eslint-config-typescript": "^3.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
+    "@babel/core": "^7.11.6",
+    "@jcheroske/eslint-config": "https://github.com/jcheroske/eslint-config.git",
+    "@jcheroske/prettier-config": "https://github.com/jcheroske/prettier-config.git",
+    "@nuxt/types": "^2.14.6",
+    "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "@types/connect": "^3.4.33",
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
     "@types/lodash": "^4.14.161",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.1.0",
-    "prettier": "^2.0.5",
-    "stylelint": "^13.6.1",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.10.0",
+    "jest": "^26.4.2",
+    "prettier": "^2.1.2",
+    "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "ts-jest": "^26.1.3",
-    "vue-jest": "^3.0.4"
+    "ts-jest": "^26.4.0",
+    "typescript": "^4.0.3",
+    "vue-jest": "^3.0.7"
   }
 }
