--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,18 @@
     "build": "nexus build",
     "start": "node .nexus/build/api"
   },
+  "dependencies": {
+    "nexus": "^0.26.1",
+    "nexus-plugin-prisma": "^0.19.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2"
+  },
   "eslintConfig": {
     "root": true,
     "parser": "@typescript-eslint/parser",
@@ -27,16 +39,7 @@
     "singleQuote": true,
     "trailingComma": "all"
   },
-  "dependencies": {
-    "nexus": "^0.26.1",
-    "nexus-plugin-prisma": "^0.18.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.1"
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
   }
 }
